Minor style fixes to web

--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
     <love-game>
       <canvas id="canvas" width="1056" height="672"></canvas>
       <noscript>
-        Sorry, this game requires JavaScript to be enabled.
+        Sorry, this game requires JavaScript.
       </noscript>
     </love-game>
   </body>
